--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Shashank BN</h1>
 						   					<h2>And I am a Software Engineer</h2>
-												<p><a href="CV_2023022111065425.pdf">View CV <i class="icon-download4"></i></a></p>
+												<p><a href="CV_2023022111065425.pdf">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
